Remove package resolved and add workspace to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 WineCellarApp.xcodeproj/xcuserdata
+WineCellarApp.xcodeproj/project.xcworkspace/
 WineCellarApp.xcodeproj/project.xcworkspace/xcuserdata/
