--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,32 +4,23 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: macos-latest
     strategy:
       matrix:
         run-config:
-          - { scheme: 'Regions', destination: 'platform=iOS Simulator,OS=13.4.1,name=iPhone 8' }
-          - { scheme: 'Cellar', destination: 'platform=iOS Simulator,OS=13.4.1,name=iPhone 8' }
+          - { scheme: 'Regions', destination: 'platform=iOS Simulator,OS=14.2,name=iPhone 12' }
+          - { scheme: 'Cellar', destination: 'platform=iOS Simulator,OS=14.2,name=iPhone 12' }
 
     steps:
     - name: Checkout Project
       uses: actions/checkout@v1
 
-    - name: Homebrew build helpers install
-      run: brew bundle
-
     - name: Show the currently detailed version of Xcode for CLI
       run: xcode-select -p
 
-      #- name: Show what's in Applications
-      #run: ls -al /Applications
+    - name: Switch to Xcode 12
+      run: sudo xcode-select -s /Applications/Xcode_12.2.app
 
-      #- name: Switch to Xcode 12
-      #run: sudo xcode-select -s /Applications/Xcode_12.2.app
+    - name: build Regions
+      run: xcodebuild -scheme '${{ matrix.run-config['scheme'] }}' -destination '${{ matrix.run-config['destination'] }}' -showBuildTimingSummary
 
-    - name build Regions
-      run: xcodebuild clean -scheme Regions -destination 'platform=iOS Simulator,OS=14.2,name=iPhone 12'
-
-    - name: build Cellar
-      run: xcodebuild clean -scheme Cellar -destination 'platform=iOS Simulator,OS=14.2,name=iPhone 12'
