Add test scheme

--- a/WineCellarApp.xcodeproj/xcshareddata/xcschemes/Regions.xcscheme
+++ b/WineCellarApp.xcodeproj/xcshareddata/xcschemes/Regions.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5FFBFF78257EA27E0088BFE2"
+               BuildableName = "WineRegionsAppTests.xctest"
+               BlueprintName = "WineRegionsAppTests"
+               ReferencedContainer = "container:WineCellarApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
