Add a new Nominatim querying action extension target
The idea here is that a user should be able to visit a
Nomanatim website like this:
https://nominatim.openstreetmap.org/details.php?osmtype=R&osmid=127321&class=boundary&addressdetails=1&hierarchy=0&group_hierarchy=1&polygon_geojson=1&format=json

Then "share" the website with this app extension. The extension
will then parse out the appropriate geojson and send
it to the server hitting the appropriate endpoints to
save the geojson on the server

--- a/WineCellarApp.xcodeproj/xcshareddata/xcschemes/Cellar.xcscheme
+++ b/WineCellarApp.xcodeproj/xcshareddata/xcschemes/Cellar.xcscheme
@@ -28,6 +28,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5F835346256D96AA00C2345F"
+               BuildableName = "WineCellarAppUITests.xctest"
+               BlueprintName = "WineCellarAppUITests"
+               ReferencedContainer = "container:WineCellarApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5F83533B256D96AA00C2345F"
+               BuildableName = "WineCellarAppTests.xctest"
+               BlueprintName = "WineCellarAppTests"
+               ReferencedContainer = "container:WineCellarApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
