Add .DS_Store to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 WineCellarApp.xcodeproj/xcuserdata
 WineCellarApp.xcodeproj/project.xcworkspace/
 WineCellarApp.xcodeproj/project.xcworkspace/xcuserdata/
+.DS_Store
