--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,10 @@ jobs:
 
     - name: Switch to Xcode 12
       run: sudo xcode-select -s /Applications/Xcode_12.2.app
-
+      
+    - name: Set known hosts on build machine
+      run: for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts
+      
     - name: build Regions
       run: xcodebuild -scheme '${{ matrix.run-config['scheme'] }}' -destination '${{ matrix.run-config['destination'] }}' -showBuildTimingSummary
 
