--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,6 +12,8 @@ jobs:
           #- { scheme: 'Cellar', destination: 'platform=iOS Simulator,OS=14.4,name=iPhone 12' }
 
     steps:
+
+    # From https://github.com/marketplace/actions/setup-netrc
     - name: Setup netrc
       uses: extractions/netrc@v1
       with:
